--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     <div class="side-menu" id="sideMenu">
         <div class="menu-row">
-            <input type="number" id="seedInput" class="seed-input" placeholder="SEED (e.g. 758)">
+            <input type="number" id="seedInput" class="seed-input" placeholder="SEED">
         </div>
         <div class="menu-row">
             <button class="btn-action" style="width: 100%;" onclick="applySeed()">REBOOT SYSTEM</button>
